--- a/todoist/index.html
+++ b/todoist/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todoist</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <div class="overlay"></div>
@@ -13,8 +14,14 @@
       <input type="text" name="title" placeholder="Title" required />
       <input type="text" name="description" placeholder="Description" />
       <input type="date" name="duedate" placeholder="Due Date" required />
-      <input type="text" name="priority" placeholder="Priority" />
-      <button type="submit" name="create">Create</button>
+      <!-- <input type="text" name="priority" placeholder="Priority" /> -->
+      <select name="priority">
+        <option value="low">LOW</option>
+        <option value="medium">MEDIUM</option>
+        <option value="high">HIGH</option>
+      </select>
+
+      <button type="submit" name="submit">Create</button>
     </form>
 
     <div class="container">
