added delete for each new todolist

--- a/todoist/index.html
+++ b/todoist/index.html
@@ -29,7 +29,7 @@
         <h1>Todoist</h1>
         <nav>
           <ul>
-            <li data-name="Personal" class="active">Personal</li>
+            <li data-name="Personal" class="active"><span> Personal </span></li>
 
             <!-- new list will be added here -->
           </ul>
