--- a/carousel/index.html
+++ b/carousel/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="#">
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <div class="container">
@@ -41,6 +41,6 @@
       <span class="dot"></span>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
